VNT-56 wrong background-position: fixed

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -34,7 +34,7 @@
     background-image: url("../Images/volunteer2.png");
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position: fixed;
+    background-attachment: fixed;
     background-color: #50aaaa;
 }
 
